--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -19,9 +20,24 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets: 
+    - assets/
 
 msix_config:
   display_name: Basic Initiative Tracker
   publisher_display_name: Bailie Gowing
   identity_name: bailiegowing.basicInitiativeTracker
+  logo_path: assets/appIcon.png
   msix_version: 1.0.0.0
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/appIcon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  windows:
+    generate: true
+    image_path: "assets/appIcon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+
+
