Added certificate and installation instructions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ msix_config:
   publisher_display_name: Bailie Gowing
   identity_name: bailiegowing.basicInitiativeTracker
   logo_path: assets/appIcon.png
+  certificate_path: C:\dev\init_tracker\Basic-Initiative-Tracker\basicInitTrackerCert.pfx
+  certificate_password: b@s1c1n1tTr@ckerCertP@ssword
   msix_version: 1.0.0.0
 
 flutter_launcher_icons:
