--- a/debian/debian.yaml
+++ b/debian/debian.yaml
@@ -10,5 +10,5 @@ control:
   Essential: no
   Priority: optional
   Depends:
-  Maintainer:
-  Description: Mega Cool App that does everything!
+  Maintainer: Bailie Gowing
+  Description: Initiative tracker
