--- a/debian/debian.yaml
+++ b/debian/debian.yaml
@@ -4,11 +4,10 @@ flutter_app:
   parent: /usr/local/lib
 
 control:
-  Package: Basic Initiative Tracker
+  Package: Basic-Initiative-Tracker
   Version: 1.0.0
   Architecture: amd64
   Essential: no
   Priority: optional
-  Depends:
   Maintainer: Bailie Gowing
   Description: Initiative tracker
