--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: basic_initiative_tracker
-description: A new Flutter project.
+description: Basic initiative tracker for roleplaying games.
 publish_to: 'none'
 version: 0.1.0
 
@@ -33,7 +33,7 @@ msix_config:
 
 flutter_launcher_icons:
   android: "launcher_icon"
-  ios: true
+  ios: false
   image_path: "assets/appIcon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   windows:
