--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,16 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_launcher_icons: ^0.13.1
+  json_annotation: ^4.8.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   msix: ^3.16.6
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
