--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  adaptive_theme: ^3.6.0
+  flex_color_picker: ^3.3.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
