--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   json_annotation: ^4.8.1
   path_provider: ^2.1.1
+  flutter_spinbox: ^0.13.1
 
 dev_dependencies:
   flutter_test:
